--- a/localisation/japanese/map/geacps_countries_colony_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_colony_l_japanese.yml
@@ -91,7 +91,7 @@
  BHU_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  BHU_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  BHU_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
- BHU_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ BHU_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  BRM_dominion:0 "$NONIDEOLOGY$自治領"
  BRM_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -909,10 +909,10 @@
  DAH_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  DAH_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  DAH_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- DAH_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ DAH_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  DAH_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  DAH_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- DAH_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ DAH_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  DJI_dominion:0 "ソマリ海岸自治領"
  DJI_dominion_DEF:0 "ソマリ海岸自治領"
@@ -1032,10 +1032,10 @@
  IVO_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  IVO_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  IVO_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- IVO_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ IVO_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  IVO_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  IVO_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- IVO_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ IVO_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  KEN_dominion:0 "$NONIDEOLOGY$自治領"
  KEN_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -1636,10 +1636,10 @@
  GUM_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  GUM_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  GUM_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- GUM_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ GUM_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  GUM_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  GUM_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- GUM_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ GUM_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  GUM_imperial_member:0 "$OVERLORDADJ$領大宮島特別自治区"
  GUM_imperial_member_DEF:0 "$OVERLORDADJ$領大宮島特別自治区"
  GUM_imperial_member_ADJ:0 "$OVERLORDADJ$領大宮島"
@@ -1648,19 +1648,19 @@
  GUM_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領大宮島"
  GUM_us_commonwealth:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
  GUM_us_commonwealth_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
- GUM_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ GUM_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  GUM_us_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
  GUM_us_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
- GUM_us_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ GUM_us_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  HAW_dominion:0 "$NONIDEOLOGY$自治領"
  HAW_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  HAW_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  HAW_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- HAW_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ HAW_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  HAW_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  HAW_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- HAW_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ HAW_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  HAW_imperial_member:0 "$OVERLORDADJ$領布哇王国"
  HAW_imperial_member_DEF:0 "$OVERLORDADJ$領布哇王国"
  HAW_imperial_member_ADJ:0 "$OVERLORDADJ$領布哇"
@@ -1669,10 +1669,10 @@
  HAW_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領布哇"
  HAW_us_commonwealth:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
  HAW_us_commonwealth_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
- HAW_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ HAW_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  HAW_us_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
  HAW_us_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
- HAW_us_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ HAW_us_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  NZL_dominion:0 "$NONIDEOLOGY$自治領"
  NZL_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -1700,10 +1700,10 @@
  SAM_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  SAM_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  SAM_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- SAM_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ SAM_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  SAM_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  SAM_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- SAM_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ SAM_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  SAM_mandated_territory_B:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
  SAM_mandated_territory_B_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
  SAM_mandated_territory_B_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
@@ -1712,10 +1712,10 @@
  SAM_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  SAM_us_commonwealth:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
  SAM_us_commonwealth_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
- SAM_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ SAM_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  SAM_us_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
  SAM_us_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
- SAM_us_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ SAM_us_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  SOL_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  SOL_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
@@ -1741,11 +1741,11 @@
  
  BHR_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  BHR_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
- BHR_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ BHR_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  BRN_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  BRN_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
- BRN_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ BRN_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  BRN_imperial_member:0 "$OVERLORDADJ$領文寧王国"
  BRN_imperial_member_DEF:0 "$OVERLORDADJ$領文寧王国"
  BRN_imperial_member_ADJ:0 "$OVERLORDADJ$領文寧"
@@ -1812,10 +1812,10 @@
  EIN_dominion_DEF:0 "$NONIDEOLOGY$連邦"
  EIN_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島植民地"
  EIN_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島植民地"
- EIN_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ EIN_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  EIN_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  EIN_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
- EIN_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ EIN_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  EIN_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  EIN_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  EIN_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
@@ -1884,10 +1884,10 @@
  INC_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  INC_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  INC_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- INC_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ INC_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  INC_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  INC_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- INC_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ INC_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  INC_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
  INC_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
  INC_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
@@ -2057,7 +2057,7 @@
 #ヨーロッパ
  AEG_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$海諸島"
  AEG_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$海諸島"
- AEG_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$海諸島"
+ AEG_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$海諸島"
  AEG_condominium:0 "共同統治領$NONIDEOLOGY$"
  AEG_condominium_DEF:0 "共同統治領$NONIDEOLOGY$"
  
@@ -2072,11 +2072,11 @@
  
  AOS_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  AOS_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
- AOS_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ AOS_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  CRE_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$島"
  CRE_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$島"
- CRE_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$島"
+ CRE_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$島"
  
  FRO_dominion:0 "フェロー諸島自治領"
  FRO_dominion_DEF:0 "フェロー諸島自治領"
@@ -2107,7 +2107,7 @@
  
  ION_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$諸島"
  ION_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$諸島"
- ION_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ ION_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  
  JER_dominion:0 "$NONIDEOLOGY$自治領"
  JER_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2129,7 +2129,7 @@
  
  RHI_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  RHI_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
- RHI_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ RHI_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  RUS_soviet_member_federal_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$連邦共和国"
  RUS_soviet_member_federal_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$連邦共和国"
@@ -2155,7 +2155,7 @@
  
  SAR_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  SAR_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
- SAR_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ SAR_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
 #アフリカ
  ASH_dominion:0 "$NONIDEOLOGY$自治領"
@@ -2183,12 +2183,12 @@
  CPV_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  CPV_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  CPV_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- CPV_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ CPV_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  CPV_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  CPV_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  CPV_POR_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$海外州"
  CPV_POR_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$海外州"
- CPV_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ CPV_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  CYR_dominion:0 "$NONIDEOLOGY$自治領"
  CYR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2215,10 +2215,10 @@
  EQA_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  EQA_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  EQA_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- EQA_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ EQA_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  EQA_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  EQA_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- EQA_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ EQA_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  EQA_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
  EQA_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
  EQA_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
@@ -2390,10 +2390,10 @@
  WAF_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  WAF_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  WAF_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- WAF_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ WAF_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  WAF_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  WAF_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- WAF_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ WAF_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  WAF_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
  WAF_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
  WAF_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
@@ -2439,10 +2439,10 @@
  ALS_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  ALS_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  ALS_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- ALS_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ ALS_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  ALS_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  ALS_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- ALS_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ ALS_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  ALS_imperial_member:0 "$OVERLORDADJ$領新須賀首長国"
  ALS_imperial_member_DEF:0 "$OVERLORDADJ$領新須賀首長国"
  ALS_imperial_member_ADJ:0 "$OVERLORDADJ$領新須賀"
@@ -2451,10 +2451,10 @@
  ALS_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領新須賀"
  ALS_us_commonwealth:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
  ALS_us_commonwealth_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
- ALS_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ ALS_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  ALS_us_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
  ALS_us_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
- ALS_us_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ ALS_us_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  ALS_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
  ALS_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
  ALS_total_socialism_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
@@ -2492,10 +2492,10 @@
  BMU_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  BMU_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  BMU_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- BMU_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ BMU_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  BMU_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  BMU_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BMU_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ BMU_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  BRB_dominion:0 "$NONIDEOLOGY$自治領"
  BRB_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2582,19 +2582,19 @@
  GDL_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  GDL_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  GDL_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- GDL_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ GDL_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  GDL_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  GDL_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- GDL_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ GDL_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  LEW_dominion:0 "$NONIDEOLOGY$諸島自治領"
  LEW_dominion_DEF:0 "$NONIDEOLOGY$諸島自治領"
  LEW_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島植民地"
  LEW_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島植民地"
- LEW_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ LEW_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  LEW_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  LEW_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
- LEW_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ LEW_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  LEW_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  LEW_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  LEW_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
@@ -2612,10 +2612,10 @@
  MTQ_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  MTQ_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
  MTQ_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- MTQ_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ MTQ_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  MTQ_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  MTQ_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- MTQ_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ MTQ_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  NEL_dominion:0 "$NONIDEOLOGY$自治領"
  NEL_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2760,10 +2760,10 @@
  WIN_dominion_DEF:0 "$NONIDEOLOGY$連邦"
  WIN_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島植民地"
  WIN_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島植民地"
- WIN_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ WIN_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  WIN_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  WIN_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
- WIN_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ WIN_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  WIN_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  WIN_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  WIN_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
@@ -2772,10 +2772,10 @@
  WIW_dominion_DEF:0 "$NONIDEOLOGY$諸島自治領"
  WIW_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島植民地"
  WIW_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島植民地"
- WIW_colony_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ WIW_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  WIW_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
  WIW_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島"
- WIW_overseas_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
+ WIW_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
  WIW_colonies_federation:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  WIW_colonies_federation_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$諸島連邦"
  WIW_colonies_federation_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$諸島"
