--- a/localisation/japanese/map/geacps_countries_cosmetic_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_cosmetic_l_japanese.yml
@@ -220,9 +220,9 @@
  
 #国家形成
 #アジア
- MA_warlord:0 "馬軍閥"
- MA_warlord_DEF:0 "馬軍閥"
- MA_warlord_ADJ:0 "馬"
+ MA_military_clique:0 "馬軍閥"
+ MA_military_clique_DEF:0 "馬軍閥"
+ MA_military_clique_ADJ:0 "馬"
  
  MSCandOMA_sultanate:0 "マスカット及びオマーン・スルタン国"
  MSCandOMA_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
@@ -448,6 +448,10 @@
  JRSandRDSandMLT_SAINTJOHN_sovereign_military_hospitaller_order:0 "エルサレム、ロードス及びマルタにおける聖ヨハネ主権軍事病院騎士修道会"
  JRSandRDSandMLT_SAINTJOHN_sovereign_military_hospitaller_order_DEF:0 "エルサレム、ロードス及びマルタにおける聖ヨハネ主権軍事病院騎士修道会"
  JRSandRDSandMLT_SAINTJOHN_sovereign_military_hospitaller_order_ADJ:0 "マルタ騎士団"
+ 
+ KRC-CHS_republic:0 "カラチャイ＝チェルケス共和国"
+ KRC-CHS_republic_DEF:0 "カラチャイ＝チェルケス共和国"
+ KRC-CHS_republic_ADJ:0 "カラチャイ＝チェルケス"
  
  LEMKO-RUSYN_peoples_republic:0 "レムコ＝ルシン人民共和国"
  LEMKO-RUSYN_peoples_republic_DEF:0 "レムコ＝ルシン人民共和国"
